# activation-vectors-as-weights

./: .gitignore  README.md  pyproject.toml
experiments/: 01_cross_arch_comparison.py  02_fuse_and_hub_demo.py  08_fuse_and_hub_demo.py
results/cross_arch/sycophancy_suppression/: cka_matrix.csv  layer_depth_similarity.csv
results/cross_arch/uncertainty_expression/: cka_matrix.csv  layer_depth_similarity.csv
tests/: conftest.py
tests/integration/: test_fuse_pipeline.py
tests/unit/: test_cka.py  test_fusion.py  test_load_functions.py
