[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "activation-vectors-as-weights"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn",
    "safetensors",
    "pandas",
    "tqdm",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
include = ["activation_baking*"]
